# ZerePy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.anvil  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
agents/: general.json  shiami.json
src/: agent.py  cli.py  connection_manager.py  database.py  initialize_db.py  prompts.py
src/actions/: browser_use_actions.py  eternalai_actions.py  meme_tools.py  price_prediction_actions.py  price_prediction_workflow.py  social_media_collector.py  solana_actions.py  sonic_actions.py  text_generation.py  together_ai_actions.py
src/agents/: __init__.py  email_agent.py  image_agent.py  portfolio_rebalance_agent.py  price_agent.py  price_prediction_agent.py  python_repl.py  rag_agent.py  scheduler_agent.py  shiami.py  silo_agent.py  test_rag_agent.py  text_generation.py  text_to_video_agent.py  transactions_agent.py
src/agents/AgentSpawner/: main.py
src/agents/RAG_agent/: helper_functions.py  rag_agent.py
src/agents/portfolio_rebalance_agent/: main_agent.py  portfolio_agent.py  run_agent.py  technical_analyzer.py
src/agents/price_agent/: best_model_bitcoin.pth  price_predict_tool.py
src/agents/price_prediction/: config.yaml  price_predictor.py  reddit_scraper.py  sentiment_analyzer.py  technical_collector.py  twitter_data.py
src/agents/text_to_video_agent/: main.py
src/connections/: beets_connection.py  browser_use_connection.py  debridge_connection.py  ethereum_connection.py  gemini_connection.py  groq_connection.py  llm_base_connection.py  openai_connection.py  pendle_connection.py  privy_connection.py  silo_connection.py  sonic_connection.py  together_ai_connection.py  tx_connection.py
src/constants/: abi.py  networks.py
src/framework/: react_agent.py  workflow_builder.py
src/helpers/: auth_helper.py  pinata.py  privy_helper.py
src/helpers/solana/: lend.py
src/models/: __init__.py  agent.py  image.py  wallet.py
src/server/: app.py  tools.py
src/server/routes/: agents.py  llm.py  tools.py
src/tools/: beets_tools.py  debridge_tools.py  email_tool.py  pendle_tools.py  price_tools.py  privy_tools.py  rag_tools.py  scheduler_tool.py  silo_tools.py  sonic_tools.py  text_to_video_tools.py  together_tools.py  tx_tools.py
src/tools/privy/: helpers.py  pendle_tools.py  silo_tools.py  sonic_tools.py
src/types/: privy_types.py
src/utils/: create_agent.py  vector_store_utils.py
src/utils/stores/: chainid_store.py
tests/: test_privy_silo_borrow.py  test_privy_silo_claim.py  test_privy_silo_deposit.py  test_privy_silo_exit_strategy.py  test_privy_silo_looping.py  test_privy_silo_repay.py  test_privy_silo_withdraw.py  test_privy_sonic_swap.py  test_privy_sonic_wrap.py
