[tool.poetry]
name = "zerepy"
packages = [{ include = "src" }]
version = "0.1.0"
description = "A launch-pad for AI agents"
authors = ["Ayoub Ed <ayoub@blorm.xyz>", "Efrain <ef@blorm.xyz>", "Max <max@blorm.xyz>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
python-dotenv = "^1.0.1"
openai = "^1.63.0"
prompt-toolkit = "^3.0.48"
anthropic = "^0.42.0"
farcaster = "^0.7.11"
goat-sdk = "^0.1.4"
goat-sdk-wallet-web3 = "^0.1.4"
web3 = "^6.20.3"
goat-sdk-plugin-erc20 = "^0.1.0"
goat-sdk-plugin-coingecko = "^0.1.1"
solders = "^0.21.0,<0.24.0"
solana = "^0.35.0"
aiohttp = "^3.11.11"
requests = "2.32.3"
jupiter-python-sdk = "^0.0.2.0"
allora-sdk = "^0.1.0"
requests-oauthlib = "^1.3.1"
fastapi = { version = "^0.109.0", optional = true }
uvicorn = { version = "^0.27.0", optional = true }
langchain-openai = "0.3.1"
langchain-ollama = "0.2.2"
langchain-anthropic = "0.3.3"
langchain-groq = "^0.2.4"
langchain-xai = "^0.2.0"
langchain-core = "^0.3.35"
langchain = "0.3.14"
langgraph = "^0.2.72"
langchain-community = "0.3.14"
browser-use = "^0.1.37"
together = "^1.4.1"
psycopg = {extras = ["binary"], version = "^3.2.4"}
psycopg-pool = "^3.2.4"
langgraph-checkpoint-postgres = "^2.0.14"
psycopg2 = "^2.9.10"
langchain-postgres = "^0.0.13"
langchain-experimental = "^0.3.4"
langgraph-checkpoint = "^2.0.13"
xgboost = "^2.1.4"
lightgbm = "^4.6.0"
scikit-learn = "^1.6.1"
praw = "^7.8.1"
transformers = "^4.48.3"
spacy = "^3.8.4"
networkx = "^3.4.2"
pypdf = "^5.3.0"
torch = "^2.6.0"
chromadb = "^0.6.3"
langchain-chroma = "^0.2.2"
neo4j = "^5.28.1"
faiss-cpu = "^1.10.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
nltk = "^3.9.1"
deepeval = "^2.3.8"
rank-bm25 = "^0.2.2"
pymupdf = "^1.25.3"
keras = "^3.8.0"
ta = "^0.11.0"

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "requests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
