[tool.poetry]
name = "ZerePy"
version = "0.1.0"
description = "A launch-pad for AI agents"
authors = ["Ayoub Ed <ayoub@blorm.xyz>", "Efrain <ef@blorm.xyz>", "Max <max@blorm.xyz>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
openai = "^1.63.0"
prompt-toolkit = "^3.0.48"
anthropic = "^0.42.0"
farcaster = "^0.7.11"
goat-sdk = "^0.1.4"
goat-sdk-wallet-web3 = "^0.1.4"
web3 = "^6.20.3"
goat-sdk-plugin-erc20 = "^0.1.0"
goat-sdk-plugin-coingecko = "^0.1.1"
solders = "^0.21.0,<0.24.0"
solana = "^0.35.0"
aiohttp = "^3.11.11"
requests = "2.32.3"
jupiter-python-sdk = "^0.0.2.0"
allora-sdk = "^0.1.0"
requests-oauthlib = "^1.3.1"
fastapi = { version = "^0.109.0", optional = true }
uvicorn = { version = "^0.27.0", optional = true }
langchain-openai = "0.3.1"
langchain-ollama = "0.2.2"
langchain-anthropic = "0.3.3"
langchain-groq = "^0.2.4"
langchain-xai = "^0.2.0"
langchain-core = "^0.3.35"
langchain = "0.3.14"
langgraph = "^0.2.72"
langchain-community = "0.3.14"
browser-use = "^0.1.37"
together = "^1.4.1"
psycopg = "^3.2.4"
psycopg-pool = "^3.2.4"
langgraph-checkpoint-postgres = "^2.0.14"
psycopg2 = "^2.9.10"
langchain-postgres = "^0.0.13"
langchain-experimental = "^0.3.4"
langgraph-checkpoint = "^2.0.13"
networkx = { version = "^3.4.2", optional = true }
spacy = { version = "^3.8.4", optional = true }
torch = { version = "^2.6.0", optional = true }
transformers = { version = "^4.48.3", optional = true }
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0.tar.gz", optional = true }
pypdf = { version = "^5.3.0", optional = true }
faiss-cpu = { version = "^1.10.0", optional = true }
croniter = { version = "^6.0.0", optional = true }
apscheduler = { version = "^3.11.0", optional = true }
scikit-learn = { version = "^1.6.1", optional = true }
ta = { version = "^0.11.0", optional = true }
pandas = { version = "^2.2.3", optional = true }

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "requests"]
rag = ["networkx", "spacy", "torch", "transformers", "en_core_web_md", "pypdf", "faiss-cpu"]
agents = ["croniter", "apscheduler", "scikit-learn", "torch", "ta", "pandas"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
