[tool.poetry]
name = "Shiami"
version = "0.1.0"
description = "ZerePy Modification for Shiami"
authors = ["Parth Gupta <parth.eng1210@gmail.com>", "Chirag Khandelwal <chirag123khandelwal@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
prompt-toolkit = "^3.0.48"
web3 = "^6.20.3"
solders = "^0.21.0,<0.24.0"
aiohttp = "^3.11.11"
requests = "2.32.3"
fastapi = { version = "^0.109.0", optional = true }
uvicorn = { version = "^0.27.0", optional = true }
langchain-core = "^0.3.35"
langchain = "0.3.14"
langgraph = "^0.2.72"
langchain-community = "0.3.14"
browser-use = "^0.1.37"
together = "^1.4.1"
langgraph-checkpoint-postgres = "^2.0.14"
langgraph-checkpoint = "^2.0.13"
faiss-cpu = { version = "^1.10.0", optional = true }
croniter = { version = "^6.0.0", optional = true }
apscheduler = { version = "^3.11.0", optional = true }
cryptography = "^44.0.2"

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "requests"]
agents = ["croniter", "apscheduler"]

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
